--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,26 +3,9 @@
 	<div class="container-fluid">
 	  <div class="row">
 		<div class="col-sm-4">
-
-		  <p>&copy 2023 UTS NLP. <a href="https://github.com/utsnlp/utsnlp.github.io" target="_blank">Website template</a> modified from <a href="http://www.allanlab.org/aboutwebsite.html" target="_blank">Allan Lab</a>.
-			</p>
-              <p>We are part of the <a href="https://www.uts.edu.au/research/australian-artificial-intelligence-institute" target="_blank">Australian Artificial Intelligence Institute (AAII)</a> at <a href="https://www.uts.edu.au/" target="_blank">University of Technology Sydney</a>.</p>
+		  <p>&copy 2025 NEUQ LIS. <a href="https://github.com/neunlp/neunlp.github.io" target="_blank">Website template</a> modified from <a href="http://www.allanlab.org/aboutwebsite.html" target="_blank">Allan Lab</a>.</p>
 
 
-
-		</div>
-		<!-- <div class="col-sm-4">
-		  Funding:<br />
-      - StG and CoG from the <a href="https://erc.europa.eu">ERC</a><br />
-		  - <a href="http://www.nwo.nl/en/research-and-results/programmes/Talent+Scheme">Vidi </a> and <a href='https://www.fom.nl/en/news/press-releases/2016/11/18/28634/'>Projectruimte</a> grants from <a href="http://www.nwo.nl">NWO</a> <br />
-		  - <a href="https://www.universiteitleiden.nl/en/research/research-projects/science/frontiers-of-nanoscience-nanofront">Frontier of Nanosciences</a>, a gravity program from <a href="http://www.nwo.nl">NWO</a>
-		</div> -->
-		<div class="col-sm-4">
-		  Contact:<br />
-		  University of Technology Sydney<br />
-		  Ultimo NSW 2007<br />
-		  Australia<br />
-            <!-- (<a href="https://goo.gl/maps/H2RjutkyoUH2">Maps</a>, <a href="http://www.physics.leidenuniv.nl/travel-directions">Directions</a>) -->
 		</div>
 	  </div>
 	</div>
