--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
   <div id="homeid" class="col-sm-12">
-  <h1>Welcome to the UTS NLP Group</h1>
+  <h1>Welcome to the NEUQ LIS Group</h1>
 
 	{{ content }}
   </div>
